# SponsorCheck

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/sponsorcheck/api/: main.py  routes_classify.py  routes_data.py  routes_report.py  routes_salary.py  schemas.py
backend/sponsorcheck/classification/: json_utils.py  llm_classifier.py  prompts.py  retriever.py  rule_based_classifier.py  validation.py
backend/sponsorcheck/data/: loaders.py  metadata_store.py  salary_rule_store.py  soc_store.py  special_dataset_store.py
backend/sponsorcheck/domain/: exceptions.py  models.py  route_models.py  salary_models.py
backend/sponsorcheck/llm/: openai_compatible.py
backend/sponsorcheck/questions/: missing_facts.py
backend/sponsorcheck/reports/: html_renderer.py  pdf_generator.py  store.py
backend/sponsorcheck/salary/: base.py  evaluator.py  health_and_care_worker.py  healthcare_education.py  immigration_salary_list.py  medium_skilled_gate.py  new_entrant.py  phd_discount.py  postdoctoral.py  pre_2024_cos.py  standard_skilled_worker.py  temporary_shortage_list.py
backend/tests/: test_backend.py  test_data_cleanliness.py
data/: dataset_gap_analysis_v3.json  skilled_worker_salary_rules_v3.json  soc_records_enriched_v3.json  special_salary_datasets_v3.json  uk_skilled_worker_soc_app_data_v3.json
frontend/: Dockerfile
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CandidateTable.tsx  Disclaimer.tsx  EvidencePanel.tsx  JobDescriptionForm.tsx  MissingFactsPanel.tsx  (+6 more)
(+2 files in other folders)
