[project]
name = "sponsorcheck"
version = "0.1.0"
description = "A developer-first UK Skilled Worker SOC code and salary route checker."
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pdfkit>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "uvicorn>=0.30.0",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
